--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ gradle-app.setting
 
 # Ignore Gradle build output directory
 build
+
+# Ignore local downloads
+opt
+
+# Ignore IntelliJ files
+.idea
